# ScoutGG

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml
.claude/: settings.local.json
.claude/agents/api-specialist/: SKILL.md
.claude/agents/product-guardian/: SKILL.md
.claude/agents/ux-guardian/: SKILL.md
.claude/skills/create-github-issues/: SKILL.md
.claude/skills/generate-narrative/: SKILL.md
.claude/skills/riot-api-query/: SKILL.md
.github/workflows/: ai.yml  broadcast.yml  build-gate.yml  frontend.yml  riot-api.yml  server.yml
ai/: .coverage  consumer.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt
ai/alembic/: env.py
ai/alembic/versions/: V1_create_narratives.py
ai/tests/: conftest.py  test_consumer.py
broadcast/: .coverage  Dockerfile  pyproject.toml  requirements.txt  worker.py
broadcast/alembic/: env.py
broadcast/alembic/versions/: V1_create_broadcast_signals.py
broadcast/tests/: conftest.py  test_worker.py
dev/: 404.html  index.html  index.txt
dev/players/: _.html  _.txt
dev/teams/: _.html  _.txt
docs/: prd-12-player-stats.md
frontend/: Dockerfile  bun.lockb  next.config.mjs  package-lock.json  package.json  vitest.config.js
frontend/app/: error.jsx  globals.css  layout.jsx  layout.test.jsx  loading.jsx  page.jsx
frontend/components/: MSWProvider.jsx  QueryProvider.jsx
frontend/components/Card/: Card.module.css  Card.test.jsx  index.jsx
frontend/components/Home/: Home.test.jsx  (+2 more)
frontend/lib/: api.js  hooks.js
frontend/mocks/: handlers.js
riot-api/: pom.xml
server/: Dockerfile  pom.xml
(+73 files in other folders)
