[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "scoutgg-broadcast"
version = "0.0.1"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__."]
